
3.03  2012-07-06
  - Improved load balancing between Hypnotoad worker processes.
  - Improved Hypnotoad log messages.
  - Improved documentation.
  - Improved tests.
  - Fixed small namespace detection bug in Mojo::DOM.
  - Fixed small bug in Test::Mojo.

3.02  2012-07-03
  - Added pluck and uniq methods to Mojo::Collection.
  - Added regular expression support to first and grep methods in
    Mojo::Collection.
  - Improved documentation.
  - Improved tests.
  - Fixed JSON Pointer escaping.
  - Fixed small text and attribute extraction bugs in Mojo::DOM.
  - Fixed small inconsistency between routes and static dispatchers.

3.01  2012-07-01
  - Improved CSS of built-in templates.
  - Improved documentation. (diegok, sri)

3.0  2012-06-25
  - Code name "Rainbow", this is a major release.
  - Removed Mojolicious::Plugin::I18N so it can be maintained as a separate
    distribution.
  - Removed app_class attribute from Mojo::Server.
  - Removed qp_decode and qp_encode methods from Mojo::ByteStream.
  - Removed qp_decode and qp_encode functions from Mojo::Util.
  - Removed render_to_file and render_file_to_file methods from
    Mojo::Template.
  - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
  - Renamed Mojo::Command to Mojolicious::Command.
  - Renamed format, reqs, symbol_start and symbols attributes in
    Mojolicious::Routes::Pattern to format_regex, constraints,
    placeholder_start and placeholders.
  - Merged get_all_data and get_data methods from Mojo::Command into data
    method in Mojo::Loader.
  - Moved class_to_file and class_to_path methods from Mojo::Command to
    Mojo::Util.
  - Updated IO::Socket::SSL requirement to 1.75 for IO::Socket::IP support.
  - Switched back from IO::Socket::INET6 to IO::Socket::IP for IPv6 support.
  - Switched from HMAC-MD5 to HMAC-SHA1 for signed cookies.
  - Added slurp function to Mojo::Util.
  - Added slurp method to Mojo::ByteStream.
  - Added j and r functions to ojo. (sharifulin, sri)